# rocky

./: .gitattributes  .gitignore  .taplo.toml  AGENTS.md  AGENT_REVIEW.md  CLAUDE.md  CODEX_REVIEW.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_SMOKE.md  ROCKY_EXPLAINED.md  SECURITY.md  justfile
engine/: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  deny.toml  install-dev.sh  install.ps1  install.sh  rocky.toml
engine/.cargo/: audit.toml
engine/.claude/: settings.json
engine/.claude/skills/databricks/: SKILL.md
engine/.claude/skills/fivetran/: SKILL.md
engine/.claude/skills/rocky/: SKILL.md
engine/.claude/skills/rust-analyzer-ssr/: SKILL.md
engine/.claude/skills/rust-async-tokio/: SKILL.md
engine/.claude/skills/rust-bench-criterion/: SKILL.md
engine/.claude/skills/rust-clippy-triage/: SKILL.md
engine/.claude/skills/rust-dep-hygiene/: SKILL.md
engine/.claude/skills/rust-doc/: SKILL.md
engine/.claude/skills/rust-error-handling/: SKILL.md
engine/.claude/skills/rust-style/: SKILL.md
engine/.claude/skills/rust-unsafe/: SKILL.md
engine/.config/: nextest.toml
engine/crates/rocky-adapter-sdk/: Cargo.toml
engine/crates/rocky-adapter-sdk/src/: auth.rs  conformance.rs  lib.rs  manifest.rs  process.rs  throttle.rs  traits.rs
engine/crates/rocky-ai/: Cargo.toml
engine/crates/rocky-ai/src/: client.rs  contract.rs  explain.rs  generate.rs  lib.rs  prompt.rs  sidecar.rs  sync.rs  testgen.rs
engine/crates/rocky-airbyte/: Cargo.toml
engine/crates/rocky-airbyte/src/: adapter.rs  client.rs  lib.rs
engine/crates/rocky-bigquery/: CONFORMANCE.md  Cargo.toml
engine/crates/rocky-bigquery/src/: auth.rs  batch.rs  connector.rs  dialect.rs  discovery.rs  governance.rs  lib.rs  loader.rs  storage_read.rs
engine/crates/rocky-bigquery/tests/: batch_describe_live.rs  bisection_live.rs  dialect_sweep_live.rs  dialsweep_cleanup_check.rs  integration.rs  wiremock_tests.rs
engine/crates/rocky-cache/: Cargo.toml
engine/crates/rocky-cache/src/: lib.rs  memory.rs  tiered.rs  valkey.rs
engine/crates/rocky-catalog-core/: Cargo.toml
engine/crates/rocky-catalog-core/src/: client.rs  error.rs  governance.rs  lib.rs  testing.rs  (+1 more)
engine/crates/rocky-cli/: Cargo.toml
engine/crates/rocky-compiler/: Cargo.toml
engine/crates/rocky-core/: Cargo.toml  SPEC.md
engine/crates/rocky-core-compiletest/: Cargo.toml
engine/crates/rocky-databricks/: Cargo.toml
engine/crates/rocky-duckdb/: Cargo.toml
engine/crates/rocky-engine/: Cargo.toml
engine/crates/rocky-fivetran/: Cargo.toml
engine/crates/rocky-iceberg/: Cargo.toml
engine/crates/rocky-ir/: Cargo.toml
engine/crates/rocky-lang/: Cargo.toml
engine/crates/rocky-mcp/: Cargo.toml
engine/crates/rocky-observe/: Cargo.toml
engine/crates/rocky-server/: Cargo.toml
engine/crates/rocky-snowflake/: Cargo.toml
engine/crates/rocky-sql/: Cargo.toml
engine/crates/rocky-trino/: Cargo.toml  README.md
engine/crates/rocky-verify/: Cargo.toml
engine/crates/rocky-wasm/: Cargo.toml
engine/docs/: cli-command-groups.md  package-lock.json  package.json  rocky-lang-spec.md
engine/docs/public/: llms.txt
engine/evals/: .gitignore  README.md  pyproject.toml  run_evals.py
engine/evals/harness/: __init__.py  driver.py  environ.py  error_contract.py  fixture.py  scenarios.py  scorecard.py  scoring.py  selftest.py  transcript.py  version.py
engine/evals/scorecards/: 2026-07-08-claude-sonnet-4-5.json  2026-07-08-claude-sonnet-4-5.md  README.md
engine/evals/testdata/: recorded_transcript.jsonl
engine/examples/: README.md
engine/examples/ai-intent/: README.md  rocky.toml
engine/examples/compare-demo/: README.md  rocky.toml
engine/examples/dagster-integration/: README.md  definitions.py  defs.yaml  rocky.toml
engine/examples/dbt-migration/: README.md
engine/examples/docs-demo/: README.md  rocky.toml
engine/examples/fmt-demo/: README.md
engine/examples/multi-layer/: README.md  rocky.toml
engine/examples/process-adapter-echo/: PROTOCOL.md  README.md  rocky-echo
engine/examples/quickstart/: README.md  rocky.toml
engine/examples/seed-demo/: README.md  rocky.toml
engine/examples/shell-demo/: README.md  rocky.toml
engine/examples/snapshot/: README.md  rocky.toml
engine/examples/test-declarative/: README.md  rocky.toml
engine/examples/watch-demo/: README.md  rocky.toml
engine/examples/window-functions/: README.md  rocky.toml
engine/playground/: README.md  index.html
engine/rocky/: Cargo.toml
engine/rocky-lsp/: Cargo.toml
engine/rocky-lsp/src/: main.rs
engine/rocky/src/: main.rs
engine/rocky/tests/: audit_scorecard_window.rs  compile_managed_iceberg.rs  import_dbt_incremental.rs  plan_model_scope.rs  promote_breaking_block_stdout.rs  replay_check.rs  replay_dag.rs  replay_execute.rs  replication_verify_after.rs  run_dag_json_stdout.rs  run_var_dag_guard.rs  run_watch.rs
integrations/dagster/: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  README.md  pyproject.toml
integrations/dagster/.claude/: settings.json
integrations/dagster/.git-hooks/: commit-msg  pre-commit  pre-push
integrations/dagster/scripts/: dev_setup.py
integrations/dagster/tests/: conftest.py  scenarios.py  test_automation.py  test_branch_approval.py  test_branch_deploy.py  test_checks.py  test_column_lineage.py  test_component.py  test_contracts.py  test_dag_assets.py  test_derived_models.py  test_emit_results_dedup.py  test_empty_outputs.py  test_execution.py  test_freshness.py  test_generated_fixtures.py  test_health.py  test_observability.py  test_partitioned_checks.py  test_partitions.py  test_pipes_mode.py  test_resolvers.py  test_resource.py  test_scaffold.py  test_schedules.py  test_sensor.py  test_state_health.py  test_strict_doctor.py  test_tenant_partition.py  test_translator.py  test_types.py
sdk/python/: AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
sdk/python/examples/: quickstart.py
sdk/python/tests/: test_barrel_completeness.py  test_client.py  test_schema_parity.py  test_types.py
(+1989 files in other folders)
