[workspace]
members = [
    "crates/rocky-core",
    "crates/rocky-ir",
    "crates/rocky-sql",
    "crates/rocky-compiler",
    "crates/rocky-lang",
    "crates/rocky-snowflake",
    "crates/rocky-trino",
    "crates/rocky-ai",
    "crates/rocky-server",
    "crates/rocky-engine",
    "crates/rocky-adapter-sdk",
    "crates/rocky-bigquery",
    "crates/rocky-databricks",
    "crates/rocky-fivetran",
    "crates/rocky-airbyte",
    "crates/rocky-iceberg",
    "crates/rocky-catalog-core",
    "crates/rocky-cache",
    "crates/rocky-duckdb",
    "crates/rocky-observe",
    "crates/rocky-cli",
    "crates/rocky-mcp",
    "crates/rocky-verify",
    "crates/rocky-wasm",
    "rocky",
    "rocky-lsp",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
rust-version = "1.88"
homepage = "https://rocky-data.dev/"
repository = "https://github.com/rocky-data/rocky"

[workspace.lints.clippy]
# Correctness
correctness = { level = "deny", priority = -1 }
# Style
needless_pass_by_value = "warn"
redundant_closure_for_method_calls = "warn"
cloned_instead_of_copied = "warn"
# Perf
large_enum_variant = "warn"

[workspace.dependencies]
# Async traits
async-trait = "0.1"

# Machine hostname detection for governance audit trail
# (portable across Linux/macOS/Windows — std::env::var("HOSTNAME")
# is Linux-only and unset on macOS by default).
hostname = "0.4"

# Serialization
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
serde_yaml = "0.9"
indexmap = { version = "2", features = ["serde"] }
toml = "1"
chrono = { version = "0.4", features = ["serde"] }

# JSON Schema generation (Phase 2 — codegen source of truth for dagster + vscode types)
schemars = { version = "0.8", features = ["chrono", "indexmap2"] }

# Error handling
thiserror = "2"
anyhow = "1"
miette = { version = "7", features = ["fancy"] }

# SQL parsing
sqlparser = { version = "0.62", features = ["visitor"] }

# State store
redb = "2"
# Advisory file lock for single-writer enforcement on state DB
fs4 = "1.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
tokio = { version = "1", features = ["full"] }

# MCP server (Model Context Protocol) — stdio transport only.
# Transitively pulls schemars 1.x; the rest of the workspace uses schemars
# 0.8. The dual-major is disjoint (rmcp's `#[tool]` param structs derive
# schemars 1.x; Rocky's `*Output` structs derive 0.8) and compiles cleanly.
rmcp = { version = "2.2", features = ["server", "macros", "transport-io"] }

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip", "http2"] }

# rustls crypto provider — direct dep on the binary crates so they can
# install a single process-level default at startup. The dependency graph
# compiles in BOTH rustls 0.23 crypto backends, and neither can be removed:
#   - `ring` — pulled by `object_store`'s `cloud` feature (S3/GCS/Azure
#     state-sync), which hard-codes ring for AWS SigV4 request signing (no
#     aws-lc-rs alternative, no feature flag to switch it), and also by
#     reqwest's `rustls-tls` feature (which is ring-based, not aws-lc-rs).
#   - `aws_lc_rs` — pulled by `tonic` `tls-aws-lc` (BigQuery Storage Read
#     gRPC) and `jsonwebtoken` (GCP/Snowflake JWT signing).
# With two providers present, rustls can't auto-detect a default from crate
# features, so the first `ClientConfig::builder()` (reqwest's discover/doctor
# TLS path) panics with "Could not automatically determine the process-level
# CryptoProvider". Both providers are inherent to the dependency set, so the
# fix is to install aws-lc-rs explicitly as the process default at startup
# (see `install_crypto_provider` in the rocky / rocky-lsp binaries) — NOT to
# try to drop ring, which a workspace reqwest-feature change cannot achieve
# because object_store re-pulls it via feature unification.
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs", "std", "tls12", "logging"] }

# Async
futures = "0.3"

# Redis/Valkey
redis = "1.2"

# Cloud object store (unified S3/GCS/Azure backend for state sync + loaders)
object_store = { version = "0.14", features = ["aws", "gcp", "azure"] }
bytes = "1"
url = "2"

# Percent-encoding for URL path components in source adapter HTTP clients
# (Fivetran, Airbyte, Iceberg). Used to defend against path injection /
# traversal when interpolating user-supplied IDs / namespaces.
percent-encoding = "2"

# DuckDB
# Pinned to the 1.10503 line (year/upstream-version-coded scheme) so it
# ships against workspace `arrow 58` directly — earlier 1.4.x releases
# tracked `arrow 56` and required an IPC-stream bridge inside the
# rocky-duckdb adapter to reconcile with the workspace arrow major.
duckdb = { version = "1.10503", features = ["bundled"] }

# CSV parsing
csv = "1"

# Regex
regex = "1"

# HMAC / SHA2
hmac = "0.13"
sha2 = "0.11"

# Content-addressed hashing (row-level dedup calibration)
blake3 = "1"

# JSON Schema validation for the standalone rocky-manifest verifier. Pure-Rust,
# dependency-light, draft 2020-12 — used only by rocky-verify.
boon = "0.6"

# MD5 — used by the Fivetran object-store cache backend to compare
# locally-computed digests against S3 ETags (single-part ETags = MD5)
# for the hash-dedupe write path.
md-5 = "0.11"

# JWT / RSA / Base64
# `jsonwebtoken` 10.x requires picking a rustls crypto provider explicitly;
# without a feature the GCP/Snowflake service-account JWT signer panics at
# first use. We pick `aws_lc_rs` so the signer shares one provider with the
# `tonic` gRPC TLS stack. (reqwest's `rustls-tls` is ring-based, so the binary
# links both backends — see the `rustls` note above.)
# `pem` keeps `EncodingKey::from_rsa_pem` available for PEM-encoded
# service-account keys.
jsonwebtoken = { version = "10.4", default-features = false, features = ["aws_lc_rs", "use_pem"] }
rsa = { version = "0.9", features = ["pem"] }
base64 = "0.22"

# String similarity
strsim = "0.11"

# Secret redaction — wraps credential strings so Debug impls print *** instead of raw values
secrecy = { version = "0.10", features = ["serde"] }

# Lexer
logos = "0.16"

# Incremental computation framework (rust-analyzer's salsa). Used by the
# `rocky-lang::incremental` spike module to prove the framework's value
# for Rocky's parse pipeline. Not yet wired into the main compile flow —
# follow-up PRs migrate call sites once the framework's API surface is
# pinned for Rocky's needs.
salsa = "0.27"

# Web server
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.7", features = ["cors"] }

# LSP
tower-lsp = "0.20"

# File watching
notify = "8"

# DataFusion
datafusion = "45"
arrow = "58"
parquet = "58"

# WASM
wasm-bindgen = "0.2"

# Testing
wiremock = "0.6"

# UUID v4 — used by Snowflake stage-name generation to avoid collisions on
# parallel loads. `SystemTime::now().subsec_nanos()` resolves to
# sub-microseconds on macOS, so two concurrent `load()` calls can produce
# identical stage names; v4 UUIDs collapse the collision probability to
# astronomical.
uuid = { version = "1", features = ["v4", "fast-rng"] }

# OpenTelemetry (feature-gated in rocky-observe).
# `tracing-opentelemetry` major versions track `opentelemetry` minor
# versions: 0.33 pairs with opentelemetry 0.32 — pin the pair together.
opentelemetry = "0.32"
opentelemetry_sdk = "0.32"
opentelemetry-otlp = "0.32"
tracing-opentelemetry = "0.33"

# gRPC stack — used by `rocky-bigquery`'s Storage Read API impl of
# `WarehouseAdapter::fetch_arrow_batch`. `tonic` 0.14 + `prost` 0.14
# already appear transitively in the lock graph via opentelemetry-otlp;
# declaring them at workspace scope lets future adapters reuse the
# exact pinned majors instead of accidentally pulling a second copy.
# `tls-aws-lc` gives the gRPC channel its TLS via aws-lc-rs — the same
# provider as the `jsonwebtoken` signer. This does NOT match reqwest's
# `rustls-tls` (which is ring-based), so the binary links both rustls
# backends; the startup `install_crypto_provider` call selects aws-lc-rs.
# See the `rustls` note above.
tonic = { version = "0.14", default-features = false, features = ["codegen", "channel", "transport", "tls-aws-lc", "tls-webpki-roots"] }
prost = "0.14"
# Auto-generated tonic client for the BigQuery Storage Read API
# (`google.cloud.bigquery.storage.v1`). Tracks the workspace tonic +
# prost majors exactly.
googleapis-tonic-google-cloud-bigquery-storage-v1 = "0.34"

[profile.release]
opt-level = 3
# LTO disabled: rustc 1.95 emits LLVM-22 bitcode (e.g. via the
# `googleapis-tonic-...-bigquery-storage` crate) that the release
# linkers can't parse — Apple `ld` (libLTO ~15) and zigbuild's
# `ld.lld` (LLVM 19) both fail with "Unknown attribute kind". Disabling
# LTO drops the bitcode hand-off entirely. Revisit if the toolchains catch up.
lto = false
codegen-units = 1
panic = "abort"
strip = true
