[package]
name = "rocky"
version = "1.13.0"
description = "Rust SQL transformation engine"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["duckdb"]
duckdb = ["rocky-cli/duckdb"]
# Forward the OTLP metrics exporter flag to rocky-cli.
otel = ["rocky-cli/otel", "rocky-observe/otel"]

[dependencies]
rocky-cli = { path = "../crates/rocky-cli", default-features = false }
rocky-core = { path = "../crates/rocky-core" }
rocky-observe = { path = "../crates/rocky-observe" }
anyhow = { workspace = true }
miette = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# Used only to restore the kernel-default SIGPIPE handler on startup so the
# CLI exits cleanly when its stdout is piped into `head`, `less`, `jq | head`,
# etc. Scoped to Unix targets; Windows has no SIGPIPE.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[lints]
workspace = true
