[package]
name = "rocky"
version = "1.64.0"
description = "Rust SQL transformation engine"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["duckdb"]
duckdb = ["rocky-cli/duckdb"]
# Forward the OTLP metrics exporter flag to rocky-cli.
otel = ["rocky-cli/otel", "rocky-observe/otel"]

[dependencies]
rocky-cli = { path = "../crates/rocky-cli", default-features = false }
rocky-core = { path = "../crates/rocky-core" }
rocky-mcp = { path = "../crates/rocky-mcp" }
rocky-observe = { path = "../crates/rocky-observe" }
anyhow = { workspace = true }
miette = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
# Process-level rustls crypto provider, installed at startup before any TLS.
# See the `rustls` note in the workspace manifest.
rustls = { workspace = true }

# Used to restore the kernel-default SIGPIPE handler on startup so the
# CLI exits cleanly when its stdout is piped into `head`, `less`, `jq | head`,
# etc. Also used by the `run --watch` integration test to deliver SIGINT
# to the spawned binary. Scoped to Unix; Windows has no SIGPIPE / kill().
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Integration tests only — the `run --watch` test seeds a tiny DuckDB
# fixture before spawning the binary. `duckdb` is already in the build
# graph via `rocky-duckdb` so this is a no-op for compile time.
[dev-dependencies]
duckdb = { workspace = true }
tempfile = "3"
# `replay_check` integration test seeds a state store through the production
# ledger APIs (build_records + record_reuse_spine + record_artifact) before
# spawning the binary, so the reachability proof exercises the real read path.
rocky-ir = { path = "../crates/rocky-ir" }
chrono = { workspace = true }

[lints]
workspace = true
