[project]
name = "dagster-rocky"
version = "1.13.0"
description = "Dagster integration for the Rocky SQL transformation engine"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "Hugo Correia", email = "hello@rocky-data.dev" }]
keywords = ["dagster", "data-engineering", "sql", "transformation", "rocky", "dbt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "dagster>=1.13.0",
    "pydantic>=2.0",
    "pygments>=2.20.0",
]

[project.urls]
Homepage = "https://rocky-data.dev/"
Repository = "https://github.com/rocky-data/rocky"
Documentation = "https://rocky-data.dev/"
"Bug Tracker" = "https://github.com/rocky-data/rocky/issues"

[dependency-groups]
dev = [
    "datamodel-code-generator>=0.56.0",
    "pytest>=8.0",
    "ruff>=0.4",
]

# Register dagster_rocky as a `dg` registry module so `dg list components`,
# `dg scaffold defs dagster_rocky.RockyComponent ...`, and other dg
# commands discover RockyComponent automatically without manual config.
[project.entry-points."dagster_dg_cli.registry_modules"]
dagster_rocky = "dagster_rocky"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dagster_rocky"]

[tool.ruff]
target-version = "py311"
line-length = 100
# Generated code is produced by datamodel-code-generator from
# ../../schemas/*.schema.json via `just codegen-dagster`. Hand-editing is
# forbidden (it gets clobbered on next regen) and the generator's output
# style doesn't align with our ruff ruleset — trying to lint it produces
# noise without any fixable signal. Exclude from both lint and format.
extend-exclude = ["src/dagster_rocky/types_generated"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
