[project]
name = "dagster-rocky"
version = "1.50.0"
description = "Dagster integration for the Rocky SQL transformation engine"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "Hugo Correia", email = "hello@rocky-data.dev" }]
keywords = ["dagster", "data-engineering", "sql", "transformation", "rocky", "dbt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    # The typed result models + RockyClient now live in the standalone rocky-sdk
    # package; RockyResource is a thin Dagster adapter over RockyClient. In-repo
    # dev/CI resolves this from the local path (see [tool.uv.sources]); the
    # published wheel floors on the released SDK.
    "rocky-sdk>=0.1.2",
    # Floor matches the version CI actually resolves and tests (uv.lock). The
    # RockyComponent path uses dagster.components.* APIs from preview namespaces,
    # so we advertise a tested floor rather than an older, never-exercised one.
    "dagster>=1.13.8",
    "pydantic>=2.0",
    "pygments>=2.20.0",
]

[project.urls]
Homepage = "https://rocky-data.dev/"
Repository = "https://github.com/rocky-data/rocky"
Documentation = "https://rocky-data.dev/"
"Bug Tracker" = "https://github.com/rocky-data/rocky/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

# Resolve rocky-sdk from the monorepo path for dev + CI so the two packages
# build and test together without a PyPI round-trip. The published dagster-rocky
# wheel ignores this table and uses the `rocky-sdk>=…` version floor above.
[tool.uv.sources]
rocky-sdk = { path = "../../sdk/python", editable = true }

# Register dagster_rocky as a `dg` registry module so `dg list components`,
# `dg scaffold defs dagster_rocky.RockyComponent ...`, and other dg
# commands discover RockyComponent automatically without manual config.
[project.entry-points."dagster_dg_cli.registry_modules"]
dagster_rocky = "dagster_rocky"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dagster_rocky"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
