[package]
name = "rocky-ai"
version = "1.8.0"
description = "AI intent layer for Rocky: natural language to model generation"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rocky-compiler = { path = "../rocky-compiler" }
rocky-core = { path = "../rocky-core" }
rocky-lang = { path = "../rocky-lang" }
rocky-sql = { path = "../rocky-sql" }
reqwest = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strsim = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
