[package]
name = "rocky-airbyte"
version = "1.16.0"
description = "Airbyte source adapter for Rocky"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rocky-core = { path = "../rocky-core" }
async-trait = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
