[package]
name = "rocky-bigquery"
version = "0.1.0"
description = "BigQuery warehouse adapter for Rocky"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rocky-core = { path = "../rocky-core" }
rocky-sql = { path = "../rocky-sql" }
async-trait = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
jsonwebtoken = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
