[package]
name = "rocky-bigquery"
version = "1.50.0"
description = "BigQuery warehouse adapter for Rocky"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rocky-core = { path = "../rocky-core" }
rocky-ir = { path = "../rocky-ir" }
rocky-sql = { path = "../rocky-sql" }
rocky-observe = { path = "../rocky-observe" }
rocky-adapter-sdk = { path = "../rocky-adapter-sdk" }
async-trait = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
jsonwebtoken = { workspace = true }
base64 = { workspace = true }

# Arrow path — `WarehouseAdapter::fetch_arrow_batch` returns workspace
# `arrow 58` `RecordBatch`. The BigQuery Storage Read API hands back
# Arrow IPC schema + record-batch messages over gRPC; we splice the
# schema bytes onto each batch and feed them through
# `arrow::ipc::reader::StreamReader` to land back on workspace types.
arrow = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
prost = { workspace = true }
tonic = { workspace = true }
googleapis-tonic-google-cloud-bigquery-storage-v1 = { workspace = true }

[features]
# Exposes the `with_base_url` test seam on `BigQueryAdapter` so the
# wiremock suite can point the connector at a local mock server. Enabled
# automatically under `cfg(test)`; the feature flag lets the integration
# test target (a separate compilation unit) opt in. Production builds
# never enable it, so the seam compiles out entirely.
test-support = []

[dev-dependencies]
tokio = { workspace = true }
wiremock = { workspace = true }
serde_json = { workspace = true }

# HTTP-level mock coverage for the REST connector (execute / poll / error
# mapping / parse paths) without live credentials. Mirrors the
# rocky-snowflake and rocky-databricks wiremock suites. Gated on
# `test-support` so the `with_base_url` seam is available; CI runs it via
# `cargo test --all-features`.
[[test]]
name = "wiremock_tests"
required-features = ["test-support"]

[lints]
workspace = true
